--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
     "@tonejs/midi": "^2.0.28",
+    "@vercel/react-router": "^1.2.5",
     "dexie": "^4.3.0",
     "isbot": "^5.1.31",
     "jotai": "^2.17.1",
