--- a/biome.json
+++ b/biome.json
@@ -9,7 +9,12 @@
   },
   "linter": {
     "enabled": true,
-    "rules": { "recommended": true }
+    "rules": {
+      "recommended": true,
+      "correctness": {
+        "noUnusedImports": "error"
+      }
+    }
   },
   "formatter": {
     "enabled": true,
