--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "prepare": "husky",
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
@@ -28,6 +29,7 @@
     "react-router": "7.12.0"
   },
   "devDependencies": {
+    "husky": "^9.1.7",
     "@biomejs/biome": "^2.3.14",
     "@react-router/dev": "7.12.0",
     "@types/node": "^22",
