--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "editor.defaultFormatter": "biomejs.biome",
   "editor.tabSize": 2,
   "editor.codeActionsOnSave": {
+    "source.addMissingImports": "explicit",
     "source.fixAll.biome": "explicit",
     "source.organizeImports.biome": "explicit"
   },
